--- a/Agricola_Front/PersonalField/field_base.ui
+++ b/Agricola_Front/PersonalField/field_base.ui
@@ -66,6 +66,7 @@
      </property>
      <property name="font">
       <font>
+       <family>Pretendard Medium</family>
        <pointsize>5</pointsize>
       </font>
      </property>
@@ -112,6 +113,7 @@
         </property>
         <property name="font">
          <font>
+          <family>Pretendard Medium</family>
           <pointsize>5</pointsize>
          </font>
         </property>
@@ -147,6 +149,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -177,6 +180,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -199,6 +203,11 @@
              <height>1</height>
             </size>
            </property>
+           <property name="font">
+            <font>
+             <family>Pretendard Medium</family>
+            </font>
+           </property>
            <property name="text">
             <string>사람</string>
            </property>
@@ -220,6 +229,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -259,6 +269,7 @@
         </property>
         <property name="font">
          <font>
+          <family>Pretendard Medium</family>
           <pointsize>5</pointsize>
          </font>
         </property>
@@ -294,6 +305,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -324,6 +336,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -339,6 +352,11 @@
              <width>1</width>
              <height>0</height>
             </size>
+           </property>
+           <property name="font">
+            <font>
+             <family>Pretendard Medium</family>
+            </font>
            </property>
            <property name="styleSheet">
             <string notr="true">border: none;</string>
@@ -364,6 +382,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -403,6 +422,7 @@
         </property>
         <property name="font">
          <font>
+          <family>Pretendard Medium</family>
           <pointsize>5</pointsize>
          </font>
         </property>
@@ -438,6 +458,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -468,6 +489,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -501,6 +523,7 @@
         </property>
         <property name="font">
          <font>
+          <family>Pretendard Medium</family>
           <pointsize>5</pointsize>
          </font>
         </property>
@@ -536,6 +559,7 @@
            </property>
            <property name="font">
             <font>
+             <family>Pretendard Medium</family>
              <pointsize>5</pointsize>
             </font>
            </property>
@@ -555,6 +579,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../MyQRC.qrc"/>
+ </resources>
  <connections/>
 </ui>
