--- a/Agricola_Front/mainwindow_v1.ui
+++ b/Agricola_Front/mainwindow_v1.ui
@@ -82,6 +82,11 @@
         </property>
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
+          <property name="font">
+           <font>
+            <family>Pretendard Medium</family>
+           </font>
+          </property>
           <property name="currentIndex">
            <number>0</number>
           </property>
@@ -163,7 +168,20 @@
                <layout class="QVBoxLayout" name="basic_15"/>
               </item>
               <item row="1" column="0">
-               <layout class="QVBoxLayout" name="basic_16"/>
+               <layout class="QVBoxLayout" name="basic_16">
+                <item>
+                 <widget class="QPushButton" name="pushButton">
+                  <property name="font">
+                   <font>
+                    <family>Pretendard Medium</family>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>PushButton</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </item>
               <item row="2" column="0">
                <layout class="QVBoxLayout" name="basic_17"/>
@@ -676,6 +694,7 @@
               </property>
               <property name="font">
                <font>
+                <family>Pretendard Medium</family>
                 <pointsize>10</pointsize>
                </font>
               </property>
@@ -683,7 +702,7 @@
                <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Pretendard SemiBold'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard SemiBold'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 로그인했습니다.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 파일 '보고서_2024.pdf'을 업로드했습니다.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 게시글 '프로젝트 일정'을 작성했습니다.&lt;/span&gt;&lt;/p&gt;
@@ -744,6 +763,11 @@ p, li { white-space: pre-wrap; }
                 <height>25</height>
                </size>
               </property>
+              <property name="font">
+               <font>
+                <family>Pretendard Medium</family>
+               </font>
+              </property>
               <property name="text">
                <string>이거 누르면 메인 스텍트위젯 바뀜</string>
               </property>
@@ -756,6 +780,11 @@ p, li { white-space: pre-wrap; }
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="font">
+               <font>
+                <family>Pretendard Medium</family>
+               </font>
               </property>
               <property name="text">
                <string>PushButton</string>
@@ -775,6 +804,11 @@ p, li { white-space: pre-wrap; }
         </property>
         <item>
          <widget class="QFrame" name="frame_11">
+          <property name="font">
+           <font>
+            <family>Pretendard Medium</family>
+           </font>
+          </property>
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
