--- a/Agricola_Front/mainwindow_v1.ui
+++ b/Agricola_Front/mainwindow_v1.ui
@@ -49,6 +49,9 @@
         <property name="spacing">
          <number>0</number>
         </property>
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMaximumSize</enum>
+        </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
@@ -59,7 +62,11 @@
          <layout class="QVBoxLayout" name="frm_p0_1"/>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="frm_p0_2"/>
+         <layout class="QVBoxLayout" name="frm_p0_2">
+          <property name="spacing">
+           <number>6</number>
+          </property>
+         </layout>
         </item>
         <item>
          <layout class="QVBoxLayout" name="frm_p1_0"/>
@@ -702,7 +709,7 @@
                <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard Medium','Pretendard SemiBold'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Pretendard Medium','Pretendard Medium'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 로그인했습니다.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 파일 '보고서_2024.pdf'을 업로드했습니다.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:8pt;&quot;&gt;우지민님이 게시글 '프로젝트 일정'을 작성했습니다.&lt;/span&gt;&lt;/p&gt;
@@ -801,6 +808,9 @@ p, li { white-space: pre-wrap; }
        <layout class="QHBoxLayout" name="horizontalLayout" stretch="2">
         <property name="spacing">
          <number>0</number>
+        </property>
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMaximumSize</enum>
         </property>
         <item>
          <widget class="QFrame" name="frame_11">
